# LogFusion

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
examples/: __init__.py  advanced_usage.py  advanced_usages.py  basic_usage.py  config.py  example_for_configuration.py
logfusion/: __init__.py  config.py  decorators.py  logger.py
logfusion/handlers/: __init__.py  base_handler.py  loguru_handler.py
tests/: __init__.py  test_config.py
typings/logfusion/: __init__.pyi  config.pyi  decorators.pyi  logger.pyi
typings/logfusion/handlers/: base_handler.pyi  loguru_handler.pyi
typings/yaplogger/: __init__.pyi  config.pyi  decorators.pyi  logger.pyi
typings/yaplogger/handlers/: __init__.pyi  base_handler.pyi  loguru_handler.pyi
yaplogger/: __init__.py  config.py  constants.py  decorators.py  log.py  logger.py
yaplogger/handlers/: __init__.py  base_handler.py  loguru_handler.py
yaplogger/utils/: __init__.py  decorators.py  enums.py
